Fix alignment issue with tags

--- a/src/info/inline/components/tags/View.scss
+++ b/src/info/inline/components/tags/View.scss
@@ -14,6 +14,7 @@
 		font-weight: 100;
 		margin-bottom: 8px;
 		font-size: 14px;
+		line-height: 22px;
 		text-transform: uppercase;
 	}
 }
